     (currently raptor-options.json / cyborg-options.json) dynamically
     requested to populate following pages and content.
 - Corrected language in headers to lead user through augmented workflow
 - Added Hand-o-matic TERMS of Use to welcome page. "Next" button will
   only show when user agrees.
 - Added container and link to measurement page detailing YouMagine's web
   measurement tool

Service:
 - Added consumption of selected catalog parameter from selected Category
   in UI, related Inventory parameters used during product generation
 - Now accepting inventory file name via URL parameters
 - Corrected bugs during inventory lookups
 - Added Hand-o-matic TERMS of Use to email template
 - Corrected JSON status response types in Service
 - URL shortening introduced:
   + Consumed from u.e-nable.me
   + Implementation of PHP Yourls.
   + Requires added parameter to config.php with partner ID for use.
   + Short URL used passed to OpenSCAD generator to be printed on parts for
     reference.
   + Logic added to default to regular URL when service not reachable.

Deployment Scripts / Documentation:
   TBA

Core Models / Assembler:
 - Added Cyborg Beast, with options (hand thumb/no thumb, fingers smooth/bumps)
 - Updated Raptor files (version 2.2.2 with no tie-bars, shifted wrist hinge
   for stronger grip, etc.).
 - Added error messages displayed in the GUI (e.g. try to view thumb proximal
   for Cyborg Beast with no thumb). This sets us up for more user feedback.
 - Master options file (so we can add more designs easily)
 - File names indicate number of copies to print
   (e.g. "CyborgBeast-FingerProximal-4")
 - Improved previews (though not 100% fixed).
 - Embed URLs into Cyborg Beast and Raptor palms (for easy re-printing)

** Additional bug fixes

--------------------------------------------------------
 Version 1.2.1
--------------------------------------------------------

 User Interface: